hphp/hack/test/typecheck/const_attribute/const_static_prop/single_const_soft_late_init.php.exp
File "single_const_soft_late_init.php", line 4, characters 3-50:
__Const properties may not also be __LateInit or __SoftLateInit (Parsing[1002])
