hphp/hack/test/typecheck/const_attribute/const_static_prop/single_const_soft_late_init.php
<?hh

class A {
  <<__Const, __SoftLateInit>> public static int $a;
}
